# Thermite

./: .env.example  .gitignore  README.md  Thermite.sln  b2DebugDraw.cpp  docker-compose.yml  t0pcuomn.2hj.txt  verify-setup.sh
.bmad/: sprint-status.yaml  status.json
.github/: BRANCH_PROTECTION.md  README.md
.github/workflows/: ci.yml  deploy.yml
.opencode/command/: bmad
Thermite/: AppDelegate.cpp  Bomb.cpp  Bomb.h  BoxDebugLayer.h  Breakable.h  BuildingBlock.cpp  BuildingBlock.h  CCBox2DLayer.cpp  CCBox2DLayer.h  DelaunayTriangulation.cpp  DelaunayTriangulation.h  GLESDebugDraw.cpp  GLESDebugDraw.h  LegoBomb.cpp  LegoBomb.h  PhysicsSprite.cpp  PhysicsSprite.h  Prefix.pch  Prototype.cpp  Prototype.h  Sandbox.cpp  Sandbox.h  b2DebugDraw.h  b2Separator.cpp  b2Separator.h
Thermite.xcodeproj/: project.pbxproj
Thermite.xcodeproj/project.xcworkspace/xcuserdata/jdelorenzo.xcuserdatad/: UserInterfaceState.xcuserstate
Thermite.xcodeproj/xcuserdata/jdelorenzo.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
Thermite.xcodeproj/xcuserdata/jdelorenzo.xcuserdatad/xcschemes/: Thermite.xcscheme  xcschememanagement.plist
Thermite/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
Thermite/Resources/: Thermite.plist  Thermite.pvr.ccz  bg.plist  bg.pvr.ccz
Thermite/Resources/SpriteSheets/: bg.tps
Thermite/Thermite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Thermite/core/: Bomb.cpp  Bomb.h  BoxDebugLayer.mm  Breakable.cpp  Breakable.h  BuildingBlock.h  CCBox2DLayer.cpp  CCBox2DLayer.h  GLESDebugDraw.cpp  GLESRender.h  GLESRender.mm  NonConvexHull.cpp  NonConvexHull.h  PhysicsSprite.cpp  PhysicsSprite.h  Prototype.cpp  Prototype.h  QueryCallback.h  Sandbox.cpp  Sandbox.h  SimpleBomb.cpp  SimpleBomb.h  b2Separator.cpp  b2Separator.h
Thermite/core/ios/: RootViewController.mm
Thermite/ios/: AppController.h  AppController.mm  RootViewController.h  main.m
Thermite/libs/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.cpp
Thermite/proj.android/: AndroidManifest.xml  build.xml  build_native.sh  local.properties  makefile  ndkgdb.sh  project.properties
Thermite/proj.android/jni/: Android.mk
Thermite/proj.android/res/values/: strings.xml
Thermite/proj.android/src/tractorsandham/labs/thermite/: ThermiteActivity.java
Thermite/proj.win32/: Thermite.rc  Thermite.win32.vcxproj  Thermite.win32.vcxproj.filters  resource.h
bmad/: config.yaml
client/: Cargo.toml  Dockerfile
client/src/: main.rs  network.rs  puzzle.rs
database/: README.md  verify_schema.sh
database/schema/: 001_initial_schema.sql
docs/: architecture-thermite-2025-12-26.md  blurb.md  bmm-workflow-status.yaml  gate-check-report-thermite-2025-12-26.md  prd-thermite-2025-12-25.md  solutioning-gate-check-thermite-2025-12-29.md  sprint-plan-thermite-2025-12-26.md  sprint-plan-thermite-2026-01-04.md  sprint-status.yaml
maps/: factory_01.json  puzzle_01.json
protocol/: Cargo.toml
protocol/src/: lib.rs  player.rs  protocol.rs
server/: Cargo.toml  Dockerfile
server/migrations/: 20251226204449_initial_schema.sql
server/src/: database.rs  game_server.rs  game_state.rs  lib.rs  main.rs  map_cache.rs  map_system.rs  map_template.rs  player.rs  protocol.rs  rabbitmq.rs
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/app/: __init__.py  config.py  events.py  logging_config.py  main.py  schemas.py
services/auth-service/tests/: test_events.py  test_health.py
services/economy-service/: Dockerfile
services/match-orchestrator/: Dockerfile  pyproject.toml
services/match-orchestrator/app/: __init__.py  config.py  logging_config.py  main.py  match_manager.py  schemas.py  spawn_manager.py
services/match-orchestrator/tests/: __init__.py  test_health.py  test_spawn_manager.py
services/matchmaking/: Dockerfile  pyproject.toml
services/matchmaking/app/: __init__.py  config.py  main.py  queue_manager.py  schemas.py
services/matchmaking/tests/: __init__.py  test_health.py  test_queue_api.py  test_queue_manager.py
services/stash-service/: Dockerfile  alembic.ini  pyproject.toml  test_connection.py
services/stash-service/app/: __init__.py  config.py  main.py  schemas.py
services/stash-service/migrations/: 20251226204449_initial_schema.sql  env.py
services/stash-service/migrations/versions/: 9492f697882b_initial_schema_with_all_7_tables.py
services/stash-service/tests/: __init__.py  conftest.py  test_health.py  test_schema_integration.py  test_transaction_isolation.py
services/stash-service/thermite_stash_service/: database.py  models.py
