[package]
name = "thermite-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enable dynamic linking for faster compile times in development
bevy = { version = "0.16", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
uuid = { version = "1.11", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
thermite-protocol = { path = "../protocol" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Fast compile profile for development testing
[profile.dev.package."*"]
opt-level = 3
