[package]
name = "thermite-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "thermite_server"
path = "src/lib.rs"

[dependencies]
bevy = "0.16"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
