[package]
name = "thermite-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "thermite_server"
path = "src/lib.rs"

[dependencies]
bevy = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thermite-protocol = { path = "../protocol" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
